--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -4,9 +4,9 @@
 
 <p>{{ site.owner.bio }}</p>
 
-{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail"></i> Email: {{site.owner.email}}</a></p>{% endif %}
+{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="fa fa-fw fa-envelope-o"></i>{{site.owner.email}}</a></p>{% endif %}
 
-{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="images\icon\school.svg" target="_blank"></i> SCUT</a></p>{% endif %}
+{% if site.owner.school %}<p style="text-indent:0;margin-top:1.5em;"><a href="{{site.owner.email}}" target="_blank"><i class="fa fa-fw fa-building-o"></i></i> SCUT</a></p>{% endif %}
 
 {% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><img src="https://caihanlin.com/images/logo/icons8-cv-100.png" width="16.5" height="16.5"></i> My CV</a></p>{% endif %}
 
