--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -4,7 +4,7 @@
 
 <p>{{ site.owner.bio }}</p>
 
-{% if site.owner.email %}<p style="text-indent:0;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail"></i>"{{site.owner.email}}"</a></p>{% endif %}
+{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail"></i>{{site.owner.email}}</a></p>{% endif %}
 
 {% if site.owner.email %}<p style="text-indent:0;"><a href="{{site.owner.school}}"><i class="icon-building"></i>"SCUT"</a></p>{% endif %}
 
