--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -3,7 +3,7 @@
 <!-- <h4>{{ site.owner.name }}</h4> -->
 <div class="navigation-wrapper">
 	<div class="site-name">
-		<a href="{{ site.url }}">{{ site.title }}</a>
+		{{ site.title }}</a>
 	</div>
 <p>{{ site.owner.bio }}</p>
 
