--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -2,7 +2,7 @@
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
-{{ site.title }}</a>
+<p></p>{{ site.title }}</p>
 <p>{{ site.owner.bio }}</p>
 
 {% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail" ></i> {{site.owner.email}}</a></p>{% endif %}
