--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,8 +1,8 @@
-<img src="../images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="100" height="100"></a>
+<img src="../images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="100" height="100">{{ site.title }}</a>
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
-<p></p>{{ site.title }}</p>
+<!-- <p></p>{{ site.title }}</p> -->
 <p>{{ site.owner.bio }}</p>
 
 {% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail" ></i> {{site.owner.email}}</a></p>{% endif %}
