--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,4 +1,4 @@
-<img src="../images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="100" height="100">{{ site.title }}</a>
+<p style="text-align: center"><img src="../images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="100" height="100">{{ site.title }}</a></p>;
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
