--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -2,10 +2,10 @@
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
-<p style="text-indent:0;margin-bottom: 2.5em; margin-top: 2.5em;font-size: large;"><strong>{{ site.title }}</strong></p>
+<p style="text-indent:0;margin-bottom: 1.5em; margin-top: 1.5em;font-size: large;"><strong>{{ site.title }}</strong></p>
 <p>{{ site.owner.bio }}</p>
 
-{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail" ></i> {{site.owner.email}}</a></p>{% endif %}
+{% if site.owner.email %}<p style="text-indent:0;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail" ></i> {{site.owner.email}}</a></p>{% endif %}
 
 {% if site.owner.school %}<p style="text-indent:0;"><a href="{{site.owner.school}}"><img src="..\images\icon\school.png" width="16.5" height="16.5"></i> SCUT</a></p>{% endif %}
 
