--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -9,7 +9,7 @@
 
 {% if site.owner.school %}<p style="text-indent:0;"><a href="{{site.owner.school}}"><img src="..\images\icon\school.png" width="16.5" height="16.5"></i>华南理工大学</a></p>{% endif %}
 
-{% if site.owner.email %}<p style="text-indent:0;"><img src="..\images\icon\local.png" width="16.5" height="16.5"></i>{{ site.owner.located }}</a></p>{% endif %}
+{% if site.owner.email %}<p style="text-indent:0;"><a href="{{site.owner.located}}"></a><img src="..\images\icon\local.png" width="16.5" height="16.5"></i>电子与信息学院</a></p>{% endif %}
 
 {% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><img src="https://caihanlin.com/images/logo/icons8-cv-100.png" width="16.5" height="16.5"></i> My CV</a></p>{% endif %}
 
